--- a/README.adoc
+++ b/README.adoc
@@ -200,12 +200,31 @@ and:
 
  Sync -l path/to/log
 
+The order of options typically does not matter. It also makes no difference if
+options are placed before or after the URIs for the structures to be synced.
 Unrecognized option keys cause the program to fail with a corresponding error
 message. In case of an error, the application shows a help screen describing
 all the parameters it supports. The user can also request help explicitly by
 specifying the `--help` flag or its short alias `-h`, such as:
 
  Sync srcUri destUri --help
+
+Note that the help printed by the application is partly context-sensitive; it
+depends on the parameters already provided on the command line. If the `help`
+switch is passed without other arguments, such as
+
+ Sync -h
+
+the application shows a generic help screen listing the top-level options
+available. If the command line contained already URIs for the structures to be
+processed, e.g.
+
+  Sync /data/local/music dav:https://my.cloud-space.com/data/music --help
+
+the help screen would include descriptions of options supported by the
+structure types in use - the local file system and WebDav in this example. This
+makes it possible to complete the command line step by step, by requesting help
+for the parts that are currently defined.
 
 The options supported are described in detail below. There is one special
 option, `--file`, that expects as value a path to a local file. This file is
